# ssl_auto_streamer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.yaml  function_declarations.json  ssl_rules.yaml  system_instruction.md  team_profiles.yaml
proto/: ssl_gc_common.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_referee_message.proto  ssl_vision_detection.proto  ssl_vision_detection_tracked.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto  ssl_vision_wrapper_tracked.proto
ssl_auto_streamer/: __init__.py  app.py  event_detector.py  main.py
ssl_auto_streamer/audio/: __init__.py  game_command_announcer.py  pcm_output.py  pipeline_logger.py  utterance_queue.py  voicevox_tts.py
ssl_auto_streamer/data/: __init__.py  initial_context.py
ssl_auto_streamer/gemini/: __init__.py  analysis_agent.py  function_handler.py  live_api_client.py  reading_manager.py  text_commentary_client.py
ssl_auto_streamer/ssl/: __init__.py  dual_port_receiver.py  gc_client.py  multicast_receiver.py  ssl_gc_common_pb2.py  ssl_gc_game_event_pb2.py  ssl_gc_geometry_pb2.py  ssl_gc_referee_message_pb2.py  ssl_vision_detection_pb2.py  ssl_vision_detection_tracked_pb2.py  ssl_vision_geometry_pb2.py  ssl_vision_wrapper_pb2.py  ssl_vision_wrapper_tracked_pb2.py  tracker_client.py  vision_client.py
ssl_auto_streamer/statler/: __init__.py  world_model_reader.py  world_model_writer.py
ssl_auto_streamer/web/: __init__.py  server.py
ssl_auto_streamer/web/static/: index.html  overlay.html  (+1 more)
(+10 files in other folders)
