[project]
name = "ssl-auto-streamer"
version = "1.0.0"
description = "RoboCup SSL Auto Commentary System - Standalone"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "PyAudio>=0.2.13",
    "PyYAML>=6.0",
    "protobuf>=4.25",
]

[project.scripts]
ssl-auto-streamer = "ssl_auto_streamer.main:main"

[dependency-groups]
dev = ["grpcio-tools>=1.60", "ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ssl_auto_streamer"]
